--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
   <title>Portfolio3</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.4/css/materialize.min.css">
+
 
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <!--  <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css"> -->
   <!-- or -->
-  <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<!--   <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> -->
   
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -61,7 +60,7 @@
 
 <div class="section-container project-grid fadeIn delay-800">
 
-    <a href="#">
+    <a href="#"></a>
     <div class="project">
       <div class="project-image project-1">
         <img src="./assets/img/veeno.png">
@@ -71,7 +70,7 @@
       </div>
     </div>
 
-<a href="#">
+<a href="#"></a>
     <div class="project">
       <div class="project-image project-2">
         <img src="./assets/img/bootcamp.png">
@@ -81,7 +80,7 @@
       </div>
     </div>
 
-<a href="#">
+<a href="#"></a>
     <div class="project">
       <div class="project-image project-3">
         <img src="./assets/img/mongo.png">
@@ -91,7 +90,7 @@
       </div>
     </div>
 
-<a href="#">
+<a href="#"></a>
     <div class="project">
       <div class="project-image project-4">
         <img src="./assets/img/burgers.png">
@@ -101,7 +100,7 @@
       </div>
     </div>
 
-<a href="#">
+<a href="#"></a>
     <div class="project">
       <div class="project-image project-5">
         <img src="./assets/img/train.png">
@@ -110,7 +109,7 @@
         <h5>Train Scheduler</h5>
       </div>
     </div>
-    <a href="#">
+    <a href="#"></a>
     <div class="project">
       <div class="project-image project-6">
         <img src="./assets/img/front.png">
@@ -119,7 +118,7 @@
         <h5>Friend Finder</h5>
       </div>
     </div>
-    <a href="#">
+    <a href="#"></a>
     <div class="project">
       <div class="project-image project-7">
         <img src="./assets/img/trivia.png">
@@ -128,6 +127,7 @@
         <h5>Trivia Game</h5>
       </div>
     </div>
+  </div>
     <div class="section-container" id="about">
       <div class="about-content">
         <h2>About Me</h2>
