changes and added image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Portfolio3</title>
+  <title>Portfolio2</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 
@@ -50,6 +50,9 @@
       <div class="break"></div>
       <div class="break"></div>
       <div class="fadeIn delay-600">
+        <i class="fab fa-github"></i>
+        <i class="fab fa-github"></i>
+        <i class="fab fa-instagram"></i>
         add social icons
       </div>
     </div>
@@ -60,6 +63,7 @@
 
 <div class="section-container project-grid fadeIn delay-800">
 
+ 
     <a href="#"></a>
     <div class="project">
       <div class="project-image project-1">
@@ -125,6 +129,15 @@
       </div>
       <div class="project-title">
         <h5>Trivia Game</h5>
+      </div>
+    </div>
+    <a href="#"></a>
+    <div class="project">
+      <div class="project-image project-8">
+        <img src="./assets/img/destination.png">
+      </div>
+      <div class="project-title">
+        <h5>Destination Clicky Game</h5>
       </div>
     </div>
   </div>
